# Learn_use_lib

./: readme
learn_lib/: CMakeLists.txt  main.cpp  main.h  readme.txt
learn_lib/lib/: libout.so.1
use_lib/: CMakeLists.txt  main.cpp
